--- a/laukums.html
+++ b/laukums.html
@@ -32,6 +32,7 @@ and open the template in the editor.
             let i;
             let k=0;
             let pip=0;
+            let ieprieks;
             if(document.getElementById("laukums")!= null){
                 document.body.removeChild(document.getElementById("laukums"));
             }
@@ -65,6 +66,8 @@ and open the template in the editor.
                     teksts = setTimeout(function(){ x.setAttribute("style", "color:#2f2f2f");},2000);
                 } 
                     if(pip%2==0){
+                        ieprieks=x.id;
+                        console.log(ieprieks);
                         let {rinda, kolonna} = matrixIndexed(masivs, jauns[rr]);
                         console.log( rinda, kolonna);
                         cipars = rinda;
@@ -198,9 +201,10 @@ function jaunsMasivs(n){
                 let tmp=jauns[i];
                 jauns[i]=jauns[rand];
                 jauns[rand]=tmp;
-                console.log(jauns[i]);
-                console.log(rand);
             }
+            for(let i=0;i<jauns.length;i++){
+                    console.log(jauns[i]);
+                }
             //console.log(jauns.length);
     }
     
