--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ and open the template in the editor.
         <li><a href="#div">&lt;div&gt;</a></li>
         <li><a href="#span">&lt;span&gt;</a></li>
         <li><a href="#video">&lt;video&gt;</a></li>
-        <li><a href="file:///C:/Users/user/Documents/NetBeansProjects/newweb/public_html/laukums.html" target="_blank">spēle</a></li>
+        <li><a href="https://kkatrina2.github.io/newweb/laukums.html" target="_blank">spēle</a></li>
       </ul>
     </div>
   </div>
